# robotic-RDPSO

./: launch.txt  requirements.txt
my_robot/devel/: .catkin  .rosinstall
my_robot/devel/lib/pkgconfig/: multi_robot.pc  rpso_exploration.pc
my_robot/devel/share/multi_robot/cmake/: multi_robotConfig.cmake
my_robot/devel/share/rpso_exploration/cmake/: rpso_explorationConfig.cmake
my_robot/src/multi_robot/: CMakeLists.txt
my_robot/src/multi_robot/config/: rdpso_params.yaml
my_robot/src/multi_robot/launch/: multi_robot_simulation2.launch
my_robot/src/multi_robot/maps/: create_map.py  obstacle_world.pgm  obstacle_world.yaml  room_map.yaml  room_map1.pgm
my_robot/src/multi_robot/rviz/: multi_robot_rdpso.rviz
my_robot/src/multi_robot/scripts/: agent_node.py  obstacle_detector.py  robot_visualizer.py  tf_publisher.py
my_robot/src/multi_robot/urdf/: simple_omni_robot.urdf.xacro
my_robot/src/multi_robot/worlds/: obstacle_world.world
